--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
 	"name": "chatgpt-hash",
 	"type": "module",
 	"devDependencies": {
-		"@rollup/plugin-node-resolve": "^16.0.0",
+		"@rollup/plugin-node-resolve": "^16.0.1",
 		"@rollup/plugin-terser": "^0.4.4",
 		"@rollup/plugin-typescript": "^12.1.2",
-		"html-vision": "^0.1.5",
-		"rollup": "^4.34.8",
-		"typescript": "^5.7.3",
-		"wireit": "^0.14.11"
+		"html-vision": "^0.3.2",
+		"rollup": "^4.40.1",
+		"tslib": "^2.8.1",
+		"typescript": "^5.8.3",
+		"wireit": "^0.14.12"
 	},
 	"wireit": {
 		"build": {
