--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "chatgpt-hash",
 	"manifest_version": 3,
-	"version": "1.1",
+	"version": "1.2",
 	"permissions": [],
 	"content_scripts": [
 		{
@@ -11,6 +11,6 @@
 		}
 	],
 	"icons": {
-		"128": "./icon128.png"
+		"128": "icon128.png"
 	}
 }
